regression_tests/snap/check/testsl11/testsl11.err
================================================================================

                      PROGRAM SNAP  Version 2.7.14-3f3f047

                       Survey Network Adjustment Program

                    Copyright: Land Information New Zealand
                              Author: Chris Crook
                       Version date: Sep  5 2018 13:25:47

================================================================================
                     Run at  7-SEP-2018 09:39:24 by ccrook




================================================================================
                                                             7-SEP-2018 09:39:24

                                 ERROR SUMMARY

================================================================================

Error: Invalid "inside" option in station list requires coord sys code and wkt file name
       Line 17: File testsl11.snp

Error: The command file is not correct
