regression_tests/snap/check/testsl11/testsl11.lst
================================================================================

                      PROGRAM SNAP  Version 2.7.14-3f3f047

                       Survey Network Adjustment Program

                    Copyright: Land Information New Zealand
                              Author: Chris Crook
                       Version date: Sep  5 2018 13:25:47

================================================================================
                     Run at  7-SEP-2018 09:39:24 by ccrook



Program options read from testsl11.snp

Job: Regression tests - station lists


Solution type: 3d coordinate adjustment


Coordinates file testsl.crd
      20 stations read

Data file 1: testsl.dat
    Observations between 2000-05-01 and 2000-05-01
      19 height differences
      20 latitudes
      20 longitudes



================================================================================
Regression tests - station lists                             7-SEP-2018 09:39:24

                                     ERRORS

================================================================================

Note: 2 errors reported in testsl11.err
